--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,14 @@
     <!-- your app's js -->
     <script src="js/common.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/services/dbContext.js"></script>
+    <script src="js/services/dataContext.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/controllers/detailsCtrl.js"></script>
+    <script src="js/controllers/toolsCtrl.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="pacmApp">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
