--- a/www/index.html
+++ b/www/index.html
@@ -22,10 +22,15 @@
     <script src="js/common.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
+    <!-- <script src="js/services/crytographyMD5.js"></script> -->
+    <script src="js/services/crytographySHA1.js"></script>
     <script src="js/services/dbContext.js"></script>
     <script src="js/services/dataContext.js"></script>
+    <script src="js/services/userSession.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/detailsCtrl.js"></script>
+    <script src="js/controllers/recordsCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
   </head>
   <body ng-app="pacmApp">
