--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/services/userSession.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/new.js"></script>
     <script src="js/controllers/detailsCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
