--- a/www/index.html
+++ b/www/index.html
@@ -48,5 +48,6 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
+    <!--<canvas id="c" class="firma"></canvas>-->
   </body>
 </html>
