--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- ionic/signature_pad.js -->
+    <script src="lib/signature_pad/signature_pad.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -47,6 +49,5 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
-    <!--<canvas id="c" class="firma"></canvas>-->
   </body>
 </html>
