Funcion extra para dar de alta nuevos clientes

--- a/www/index.html
+++ b/www/index.html
@@ -30,9 +30,10 @@
     <script src="js/services/dataContext.js"></script>
     <script src="js/services/userSession.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
-    <script src="js/controllers/new.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
+    <script src="js/controllers/new.js"></script>
+    <script src="js/controllers/customer.js"></script>
     <script src="js/cleaner.js"></script>
   </head>
   <body ng-app="pacmApp">
