Revision de servicios y código en general

--- a/www/index.html
+++ b/www/index.html
@@ -26,16 +26,17 @@
     <!-- <script src="js/services/crytographyMD5.js"></script> -->
     <script src="js/services/crytographySHA1.js"></script>
     <script src="js/services/dbContext.js"></script>
-    <script src="js/services/synchronizer.js"></script>
-    <script src="js/services/dataContext.js"></script>
+    <script src="js/services/dbInstaller.js"></script>
+    <script src="js/services/dbRepository.js"></script>
+    <script src="js/services/dbSynchronizer.js"></script>
     <script src="js/services/userSession.js"></script>
     <script src="js/services/searcherPopup.js"></script>
     <script src="js/services/notesPopup.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
-    <script src="js/controllers/new.js"></script>
-    <script src="js/controllers/customer.js"></script>
+    <script src="js/controllers/newCtrl.js"></script>
+    <script src="js/controllers/customerCtrl.js"></script>
     <script src="js/cleaner.js"></script>
   </head>
   <body ng-app="pacmApp">
