Incluyo home, luego de este commit desaparece el menú lateral

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/services/searcherPopup.js"></script>
     <script src="js/services/notesPopup.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
     <script src="js/controllers/newCtrl.js"></script>
