--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,11 @@
     <script src="js/cleaner.js"></script>
   </head>
   <body ng-app="pacmApp">
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i> Inicio
+      </ion-nav-back-button>
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
