Avances de la nueva versión

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
+    <script src="js/controllers/maintenanceCtrl.js"></script>
     <script src="js/controllers/toolsCtrl.js"></script>
     <script src="js/controllers/newCtrl.js"></script>
     <script src="js/controllers/customerCtrl.js"></script>
