--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
   <body ng-app="pacmApp">
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button class="button-clear">
-        <i class="ion-arrow-left-c"></i> Inicio
+        <i class="ion-arrow-left-c"></i> Atras
       </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
