Versión candidata a producción

--- a/www/index.html
+++ b/www/index.html
@@ -35,10 +35,10 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
+    <script src="js/controllers/assemblyCtrl.js"></script>
     <script src="js/controllers/maintenanceCtrl.js"></script>
-    <script src="js/controllers/toolsCtrl.js"></script>
-    <script src="js/controllers/newCtrl.js"></script>
     <script src="js/controllers/customerCtrl.js"></script>
+    <!--<script src="js/controllers/toolsCtrl.js"></script>-->
     <script src="js/cleaner.js"></script>
   </head>
   <body ng-app="pacmApp">
