Renombrando algunos archivos

--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,8 @@
     <script src="js/services/dbRepository.js"></script>
     <script src="js/services/dbSynchronizer.js"></script>
     <script src="js/services/userSession.js"></script>
-    <script src="js/services/searcherPopup.js"></script>
-    <script src="js/services/notesPopup.js"></script>
+    <script src="js/services/searcherModal.js"></script>
+    <script src="js/services/notesModal.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/recordsCtrl.js"></script>
